--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
-    "sitemap": "^8.0.0"
+    "react-router-dom": "^6.29.0",
+    "react-scripts": "^5.0.1",
+    "sitemap": "^8.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
