--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
+    "@supabase/supabase-js": "^2.49.1",
     "aiccoin": "file:",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "sitemap": "^8.0.0",
+    "styled-components": "^6.1.15",
     "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
