--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; connect-src 'self' https://*.supabase.co https://rbdztvpllskbzqxmmzpc.supabase.co; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; frame-src 'self'; font-src 'self' data:;"
+    Content-Security-Policy = "default-src 'self'; connect-src 'self' https://*.supabase.co https://rbdztvpllskbzqxmmzpc.supabase.co; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; frame-src 'self' https://docs.google.com; font-src 'self' data:;"
     Referrer-Policy = "strict-origin-when-cross-origin"
     X-Content-Type-Options = "nosniff"
     X-Frame-Options = "DENY"
