--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
     "@rollup/plugin-terser": "^0.4.4",
+    "@stripe/stripe-js": "^7.3.0",
     "@supabase/supabase-js": "^2.49.1",
     "aiccoin": "file:",
     "cra-template": "1.2.0",
@@ -13,7 +14,6 @@
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "sitemap": "^8.0.0",
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-icons": "^5.5.0"
   }
 }
